<resources>
    <string name="app_name">Moodr</string>
    <string name="diary">Diary</string>
    <string name="habits">Habits</string>
    <string name="threegoodthings">ThreeGoodThings</string>
    <string name="three_good_things">Three Good Things</string>
    <string name="test_123">Test 123</string>
    <string name="reports">Reports</string>
    <string name="title_activity_calendar_fragment">CalendarFragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="a_button_to_add_content_to_today_s_date">A button to add content to today\'s date</string>
    <string name="today_s_date">[TODAY\'S DATE]</string>
    <string name="submit">Submit</string>
    <string name="how_are_you">How are you?</string>
    <string name="sad">Sad</string>
    <string name="down">Down</string>
    <string name="okay">Okay</string>
    <string name="good">Good</string>
    <string name="happy">Happy</string>
    <string name="thoughts_from_the_day">Thoughts from the day</string>
    <string name="click_above">Click on one of the buttons above to see some information about how you\'ve been feeling over the last weeks and months!</string>
    <string name="past_7_days">Past 7 days</string>
    <string name="past_30_days">Past 30 days</string>
    <string name="past_year">Past Year</string>
    <string name="day_number">[DAY NUMBER]</string>
    <string name="first_good_thing_about_today">First good thing about today</string>
    <string name="second_good_thing_about_today">Second good thing about today</string>
    <string name="third_good_thing_about_today">Third good thing about today</string>
    <string name="settings">Settings</string>
    <string name="give_your_entry_a_title">Give your entry a title!</string>
    <string name="title_activity_reports_diary">ReportsDiaryActivity</string>
    <string name="title_activity_reports_three_good_things">ReportsThreeGoodThingsActivity</string>
    <string name="title_activity_reports_habits">ReportsHabitsActivity</string>
    <string name="todo">TODO</string>
    <string name="a_study_conducted">A study conducted by health services researchers in Switzerland
        has shown that writing down three good things, that is three positive things in your day,
        improves your ability to have a nice day, gain supportive relationships, and make meaningful
        use of your time, this section of the app is determined to facilitate that for you!</string>
    <string name="welcome_message">Welcome to the Moodr app! Click on \'Diary\' to get started writing your first diary entry, \'Three Good Things\' to write down three positive things that happened today, \'Habits\' to start forming positive habits, or \'reports\' to see how you\'ve been doing over the last weeks and months!</string>
    <string name="logo_here">[LOGO HERE]</string>
    <string name="toggle_theme">Toggle Dark Theme</string>
    <string name="toggle_notifs">Toggle Notifications</string>
    <string name="settings_button">Settings Button</string>
    <string name="logo">Logo</string>
    <string name="welcome_to_moodr">Welcome to Moodr!</string>
    <string name="add_a_habit">Add a Habit!</string>
    <string name="give_your_habit_a_short_description">Give your habit a short description</string>
    <string name="give_your_habit_a_title">Give your Habit a title!</string>
    <string name="title_activity_view_habits">ViewHabitsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_a_new_habit">Add a new habit</string>
    <string name="hour_colon">Hour:</string>
    <string name="minute_colob">Minute:</string>
</resources>