<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reports.ReportsActivity">

    <!-- Each button will launch the same new activity with
    different fragments representing the selected timeframe -->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="32dp"
        android:text="@string/reports"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSevenDays"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="32dp"
        android:drawableStart="@drawable/outline_history_24"
        android:text="@string/past_7_days"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnThirtyDays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnThirtyDays"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/outline_history_24"
        android:text="@string/past_30_days"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/btnYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSevenDays" />

    <Button
        android:id="@+id/btnYear"
        android:layout_width="350dp"
        android:layout_height="64dp"
        android:layout_marginBottom="288dp"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/outline_history_24"
        android:text="@string/past_year"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThirtyDays" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="353dp"
        android:layout_height="68dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="64dp"
        android:text="@string/click_above"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnYear" />


</androidx.constraintlayout.widget.ConstraintLayout>