<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".habits.CreateHabitsActivity">

    <!-- TODO: Add Habits stuff -->

    <TextView
        android:id="@+id/txtYourHabits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="672dp"
        android:layout_marginEnd="123dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_a_habit"
        android:textSize="32sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edittxtTitle"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/give_your_habit_a_title"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine|text"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYourHabits"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edittxtDiary"
        style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="452dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top|start"
        android:hint="@string/give_your_habit_a_short_description"
        android:importantForAutofill="no"
        android:inputType="textLongMessage|textMultiLine|text"
        android:singleLine="false"
        android:textColor="@color/black"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxtTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>